
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[NEXT]]
== NEXT

icon:bullhorn[] Image Manipulation: The new resizing options `smart` and `prop` have been added.

[quote]
____

**smart**

When using `?resize=smart` the resizer will automatically crop the image to the desired dimensions instead of distorting it when providing `width` _and_ `height` parameters which would result in an aspect ratio that is different from the original images aspect ratio. 

The new default image resize mode is `smart` which potentially crops an image when requested aspect ratio that diverge from the source images aspectratio. The old behaviour can now be achieved by using the `?resize=force` parameter.

**prop**

To avoid cropping, request either only `width` _or_ `height` or make sure that the aspect ratio of the requested dimensions fit the source images aspect ratio. Alternatively request the image with `?resize=prop` or `?resize=force`. For details on image manipulation and resizing opions read the link:{{< relref "plugin-types/image-manipulation.asciidoc" >}}[Image Manipulation documentation].

This change might not automatically apply when an image is already in the cache. To make sure that the changes take effect, the cache in `data/binaryImageCache/` must be manually cleared.

____

icon:plus[] Search: A new search option `search.mappingMode` has been added. The mapping mode setting influences how mappings for fields will be generated. By default the mode `DYNAMIC` is used. In this mode mappings are generated as before. When using the mode `STRICT` only mappings for fields which have a custom mapping via the `elasticsearch` schema parameter will be created. This is useful if you want to have finer control of what contents should be added to Elasticsearch.
